main_svc_request initial commit